--- a/FluxOsu/FluxOsu.csproj
+++ b/FluxOsu/FluxOsu.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Injection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
