--- a/FluxOsu/FluxOsu.csproj
+++ b/FluxOsu/FluxOsu.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hooking.cs" />
     <Compile Include="Injection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
